--- a/.github/workflows/fraud-feature-pipelines.yml
+++ b/.github/workflows/fraud-feature-pipelines.yml
@@ -2,8 +2,8 @@ name: fraud-feature-pipelines
 
 on:
   workflow_dispatch:
-#  schedule:
-#    - cron: '11 11 * * *'
+    schedule:
+      - cron: '12 11 * * *'
 
 jobs:
   test_schedule:
