--- a/.github/workflows/features-and-predictions.yml
+++ b/.github/workflows/features-and-predictions.yml
@@ -3,7 +3,7 @@ name: iris-feature-and-prediction-pipelines
 on:
   workflow_dispatch:
   schedule:
-    - cron: '11 11 * * *'
+    # - cron: '11 11 * * *'
 
 jobs:
   test_schedule:
