--- a/.github/workflows/fraud-batch-inference-pipeline.yml
+++ b/.github/workflows/fraud-batch-inference-pipeline.yml
@@ -3,7 +3,7 @@ name: fraud-batch-inference-pipeline
 on:
   workflow_dispatch:
     schedule:
-      - cron: '11 11 * * *'
+      # - cron: '11 11 * * *'
 
 jobs:
   test_schedule:
