--- a/.github/workflows/fraud-feature-pipelines.yml
+++ b/.github/workflows/fraud-feature-pipelines.yml
@@ -3,7 +3,7 @@ name: fraud-feature-pipelines
 on:
   workflow_dispatch:
     schedule:
-      - cron: '12 11 * * *'
+      # - cron: '12 11 * * *'
 
 jobs:
   test_schedule:
